--- a/clients/applicant-portal/src/app/applicant-form/applicant-form.component.html
+++ b/clients/applicant-portal/src/app/applicant-form/applicant-form.component.html
@@ -1,99 +1,111 @@
-<Form [formGroup]="applicantForm" (ngSubmit)="onSubmit()">
-  <h2>Personal Details</h2>
-  <div class="form-group">
-    <label>PPS Number</label>
-    <input class="form-control col-6" type="text" formControlName="ppsnumber" />
-  </div>
-  <div
-    *ngIf="ppsnumber.invalid && (ppsnumber.dirty || ppsnumber.touched)"
-    class="alert alert-danger"
-  >
-    Please enter a PPS Number
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>First Name</label>
-      <input class="form-control" type="text" formControlName="firstName" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>Surname:</label>
-      <input class="form-control" type="text" formControlName="surname" />
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>Mobile</label>
-      <input class="form-control" type="text" formControlName="mobile" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>Home E-Mail</label>
-      <input class="form-control" type="text" formControlName="homeemail" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label>Address 1</label>
-    <input type="text" class="form-control" formControlName="address1" />
-  </div>
-  <div class="form-group">
-    <label>Address 2</label>
-    <input type="text" class="form-control" formControlName="address2" />
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>Eircode</label>
-      <input type="text" class="form-control" formControlName="eircode" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>County</label>
-      <input type="text" class="form-control" formControlName="county" />
-    </div>
+<div class="container">
+  <div class="py-5 text-center">
+    <h2>Applicant Registration Form</h2>
   </div>
   <hr />
-  <h2>Employment Information</h2>
-  <div class="form-group">
-    <label>Employer</label>
-    <select class="custom-select" formControlName="employer">
-      <option selected>Please select your employer.</option>
-      <option *ngFor="let item of employers" [value]="item._id">
-        {{ item.name }}
-      </option>
-    </select>
+  <div class="wrap-form">
+    <Form [formGroup]="applicantForm" (ngSubmit)="onSubmit()">
+      <h2>Personal Details</h2>
+      <div class="form-group">
+        <label>PPS Number</label>
+        <input
+          class="form-control col-6"
+          type="text"
+          formControlName="ppsnumber"
+        />
+      </div>
+      <div
+        *ngIf="ppsnumber.invalid && (ppsnumber.dirty || ppsnumber.touched)"
+        class="alert alert-danger"
+      >
+        Please enter a PPS Number
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>First Name</label>
+          <input class="form-control" type="text" formControlName="firstName" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>Surname:</label>
+          <input class="form-control" type="text" formControlName="surname" />
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>Mobile</label>
+          <input class="form-control" type="text" formControlName="mobile" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>Home E-Mail</label>
+          <input class="form-control" type="text" formControlName="homeemail" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Address 1</label>
+        <input type="text" class="form-control" formControlName="address1" />
+      </div>
+      <div class="form-group">
+        <label>Address 2</label>
+        <input type="text" class="form-control" formControlName="address2" />
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>Eircode</label>
+          <input type="text" class="form-control" formControlName="eircode" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>County</label>
+          <input type="text" class="form-control" formControlName="county" />
+        </div>
+      </div>
+      <hr />
+      <h2>Employment Information</h2>
+      <div class="form-group">
+        <label>Employer</label>
+        <select class="custom-select" formControlName="employer">
+          <option selected>Please select your employer.</option>
+          <option *ngFor="let item of employers" [value]="item._id">
+            {{ item.name }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Grade</label>
+        <select class="custom-select" formControlName="grade">
+          <option selected>Please select your grade.</option>
+          <option *ngFor="let grade of grades">{{ grade }}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Work E-Mail Address</label>
+        <input type="text" class="form-control" formControlName="workemail" />
+      </div>
+      <div class="form-group">
+        <label>Work Pattern</label>
+        <select class="custom-select" formControlName="fulltime">
+          <option value="true" selected>Full-Time</option>
+          <option value="false">Part-Time</option>
+        </select>
+      </div>
+      <hr />
+      <h2>Skills</h2>
+      <div>Please select any number of skills:</div>
+      <div formArrayName="skills">
+        <div
+          class="form-group"
+          *ngFor="let skill of skills.controls; let i = index"
+        >
+          <select [formControlName]="i" class="custom-select">
+            <option selected>Please select a skill</option>
+            <option *ngFor="let skill of availableSkills">{{ skill }}</option>
+          </select>
+        </div>
+        <button type="button" class="btn btn-info" (click)="addSkill()">
+          Add another Skill
+        </button>
+      </div>
+      <hr />
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </Form>
   </div>
-  <div class="form-group">
-    <label>Grade</label>
-    <select class="custom-select" formControlName="grade">
-      <option selected>Please select your grade.</option>
-      <option *ngFor="let grade of grades">{{ grade }}</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label>Work E-Mail Address</label>
-    <input type="text" class="form-control" formControlName="workemail" />
-  </div>
-  <div class="form-group">
-    <label>Work Pattern</label>
-    <select class="custom-select" formControlName="fulltime">
-      <option value="true" selected>Full-Time</option>
-      <option value="false">Part-Time</option>
-    </select>
-  </div>
-  <hr />
-  <h2>Skills</h2>
-  <div>Please select any number of skills:</div>
-  <div formArrayName="skills">
-    <div
-      class="form-group"
-      *ngFor="let skill of skills.controls; let i = index"
-    >
-      <select [formControlName]="i" class="custom-select">
-        <option selected>Please select a skill</option>
-        <option *ngFor="let skill of availableSkills">{{ skill }}</option>
-      </select>
-    </div>
-    <button type="button" class="btn btn-info" (click)="addSkill()">
-      Add another Skill
-    </button>
-  </div>
-  <hr />
-  <button type="submit" class="btn btn-primary">Submit</button>
-</Form>
+</div>
