--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
@@ -1,33 +1,54 @@
 <mat-form-field>
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
+  <input
+    matInput
+    (keyup)="applyFilter($event)"
+    placeholder="Ex. Name, Department, Grade"
+    #input
+  />
 </mat-form-field>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+    <!-- PPSN Column -->
+    <ng-container matColumnDef="ppsnumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>PPS Number</th>
+      <td mat-cell *matCellDef="let row">{{ row.ppsnumber }}</td>
     </ng-container>
 
-    <!-- Progress Column -->
-    <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Progress</th>
-      <td mat-cell *matCellDef="let row">{{ row.progress }}%</td>
+    <!-- First Name Column -->
+    <ng-container matColumnDef="firstname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+      <td mat-cell *matCellDef="let row">{{ row.firstname }}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+    <!-- Surname Column -->
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+      <td mat-cell *matCellDef="let row">{{ row.surname }}</td>
     </ng-container>
 
-    <!-- Color Column -->
-    <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Color</th>
-      <td mat-cell *matCellDef="let row" [style.color]="row.color">
-        {{ row.color }}
+    <!-- Status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.status }}
+      </td>
+    </ng-container>
+
+    <!-- Employer Column -->
+    <ng-container matColumnDef="employer">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.employer.name }}
+      </td>
+    </ng-container>
+
+    <!-- Grade Column -->
+    <ng-container matColumnDef="grade">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.grade }}
       </td>
     </ng-container>
 
