minor html tweaks

--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -1,6 +1,6 @@
 <div class="container fluid">
   <div class="row">
-    <nav class="col-md-3">
+    <nav class="col-xl">
       <div class="sidebar-sticky pt-3">
         <mat-action-list>
           <button mat-list-item routerLink="/admin/applicants">
@@ -11,7 +11,7 @@
       </div>
     </nav>
 
-    <div class="col-md-9">
+    <div class="col-xl-10">
       <router-outlet></router-outlet>
     </div>
   </div>
