--- a/clients/administration-portal/src/app/app.component.html
+++ b/clients/administration-portal/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand">Navbar</a>
+  <a class="navbar-brand">Temporary Assignments Scheme Administration</a>
   <button
     class="navbar-toggler"
     type="button"
