Added External User Module

--- a/clients/administration-portal/src/app/app.component.html
+++ b/clients/administration-portal/src/app/app.component.html
@@ -24,6 +24,9 @@
       <a class="nav-link" routerLink="/admin" routerLinkActive="active-button">
         Internal Administration
       </a>
+      <a class="nav-link" routerLink="/clients" routerLinkActive="active-button"
+        >Client Portal</a
+      >
     </div>
   </div>
 </nav>
