corrected error in fieldname

--- a/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
@@ -44,7 +44,7 @@
       <div><h1>Skills Required</h1></div>
       <div
         class="container border mb-4 p-3"
-        formArrayName="skills"
+        formArrayName="skillsrequested"
         *ngFor="let skill of skillsControls; let i = index"
       >
         <div [formGroupName]="i">
