--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.css
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.css
@@ -1,8 +1,20 @@
 table {
   width: 100%;
+  border-collapse: separate;
+  border-spacing: 50px 0;
+  table-layout: auto;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+th,
+td {
+  overflow: hidden;
+  width: auto;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 5px;
 }
