--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
@@ -52,6 +52,14 @@
       </td>
     </ng-container>
 
+    <!-- Btn Column -->
+    <ng-container matColumnDef="viewdetail">
+      <th mat-header-cell *matHeaderCellDef>View Detail</th>
+      <td mat-cell *matCellDef="let row" (click)="btnclick(row._id)">
+        View Detail
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
