--- a/clients/applicant-portal/src/app/applicant-form/applicant-form.component.html
+++ b/clients/applicant-portal/src/app/applicant-form/applicant-form.component.html
@@ -23,7 +23,7 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label>First Name</label>
-          <input class="form-control" type="text" formControlName="firstName" />
+          <input class="form-control" type="text" formControlName="firstname" />
         </div>
         <div class="form-group col-md-6">
           <label>Surname:</label>
