--- a/clients/administration-portal/src/app/modules/externalusers/externalusers.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/externalusers.component.html
@@ -6,7 +6,9 @@
           <button mat-list-item routerLink="/clients/addrequest">
             Submit Request
           </button>
-          <button mat-list-item>View Requests</button>
+          <button mat-list-item routerLink="/clients/viewrequests">
+            View Requests
+          </button>
         </mat-action-list>
       </div>
     </nav>
