Client work to register portal users

--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -9,6 +9,9 @@
           <button mat-list-item routerLink="/admin/requests/requestdetail">
             View Requests
           </button>
+          <button mat-list-item routerLink="/admin/portalusers/createuser">
+            Create Client Portal User
+          </button>
         </mat-action-list>
       </div>
     </nav>
