Added Staff View to External Module

--- a/clients/administration-portal/src/app/modules/externalusers/externalusers.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/externalusers.component.html
@@ -9,6 +9,7 @@
           <button mat-list-item routerLink="/clients/viewrequests">
             View Requests
           </button>
+          <button mat-list-item routerLink="/clients/staff">View Staff</button>
         </mat-action-list>
       </div>
     </nav>
