--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -6,7 +6,7 @@
           <button mat-list-item routerLink="/admin/applicants">
             View Applicants
           </button>
-          <button mat-list-item routerLink="/admin/requests/requestdetail">
+          <button mat-list-item routerLink="/admin/requests">
             View Requests
           </button>
           <button mat-list-item routerLink="/admin/portalusers/createuser">
