--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-detail/applicant-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-detail/applicant-detail.component.html
@@ -6,6 +6,7 @@
         <li class="list-group-item">
           Name: {{ applicant?.firstname }} {{ applicant?.surname }}
         </li>
+        <li class="list-group-item">Status: {{ applicant?.status }}</li>
         <li class="list-group-item">Mobile Number: {{ applicant?.mobile }}</li>
         <li class="list-group-item">
           Personal E-Mail Address: {{ applicant?.homeemail }}
@@ -16,70 +17,76 @@
         <li class="list-group-item">County: {{ applicant?.county }}</li>
       </ul>
     </mat-tab>
-    <mat-tab label="Employment Information">Content 2</mat-tab>
+    <mat-tab label="Employment Information">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Employer: {{ applicant?.employer.name }}
+        </li>
+        <li class="list-group-item">Grade: {{ applicant?.grade }}</li>
+        <li class="list-group-item">Work E-Mail: {{ applicant?.workemail }}</li>
+        <li class="list-group-item">
+          Full-time?: {{ applicant?.fulltime == true ? "Yes" : "No" }}
+        </li>
+      </ul>
+    </mat-tab>
+
     <mat-tab label="Rating Information" [disabled]="ratings.data.length == 0">
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="ratings" matSort>
-          <!-- Requester First Name Column -->
-          <ng-container matColumnDef="firstname">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              First Name
-            </th>
-            <td mat-cell *matCellDef="let row">
-              {{ row.request.requester.firstname }}
-            </td>
-          </ng-container>
+      <table class="ratingtable" mat-table [dataSource]="ratings" matSort>
+        <!-- Requester First Name Column -->
+        <ng-container matColumnDef="firstname">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.request.requester.firstname }}
+          </td>
+        </ng-container>
 
-          <!-- Requester Surname Column -->
-          <ng-container matColumnDef="surname">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
-            <td mat-cell *matCellDef="let row">
-              {{ row.request.requester.surname }}
-            </td>
-          </ng-container>
+        <!-- Requester Surname Column -->
+        <ng-container matColumnDef="surname">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.request.requester.surname }}
+          </td>
+        </ng-container>
 
-          <!-- Client Column -->
-          <ng-container matColumnDef="client">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Client</th>
-            <td mat-cell *matCellDef="let row">
-              {{ row.request.requester.client.name }}
-            </td>
-          </ng-container>
+        <!-- Client Column -->
+        <ng-container matColumnDef="client">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Client</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.request.requester.client.name }}
+          </td>
+        </ng-container>
 
-          <!-- Distance Column -->
-          <ng-container matColumnDef="distance">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
-            <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
-          </ng-container>
+        <!-- Distance Column -->
+        <ng-container matColumnDef="distance">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
+          <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
+        </ng-container>
 
-          <!-- Skill Fit Column -->
-          <ng-container matColumnDef="skillfit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              Match Fit %
-            </th>
-            <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
-          </ng-container>
+        <!-- Skill Fit Column -->
+        <ng-container matColumnDef="skillfit">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Match Fit %</th>
+          <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
+        </ng-container>
 
-          <!-- Btn Column -->
-          <ng-container matColumnDef="viewdetail">
-            <th mat-header-cell *matHeaderCellDef>View Detail</th>
-            <td mat-cell *matCellDef="let row">
-              <button
-                class="btn btn-outline-secondary btn-sm"
-                type="button"
-                routerLink=""
-              >
-                View Details
-              </button>
-            </td>
-          </ng-container>
+        <!-- Btn Column -->
+        <ng-container matColumnDef="viewdetail">
+          <th mat-header-cell *matHeaderCellDef>View Detail</th>
+          <td mat-cell *matCellDef="let row">
+            <button
+              class="btn btn-outline-secondary btn-sm"
+              type="button"
+              routerLink="/admin/requests/request/{{ row.request._id }}"
+            >
+              View Details
+            </button>
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-      </div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </mat-tab>
     <mat-tab label="Assignment Information" [disabled]="true"
       >Content 3</mat-tab
