--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-3">
   <div class="card-header">Applicants</div>
 
-  <div class="card-body mat-elevation-z8 mt3">
+  <div class="card-body mt3">
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input
