--- a/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
@@ -6,7 +6,7 @@
       {{ request.requester.surname }}
     </li>
     <li class="list-group-item">
-      Requesting Organisation: {{ request.requester.client }}
+      Requesting Organisation: {{ request.requester.client.name }}
     </li>
     <li class="list-group-item">
       Number Requested: {{ request.numberrequired }}
@@ -26,36 +26,68 @@
         </thead>
         <tbody>
           <tr *ngFor="let skill of request.skillsrequested">
-            <td>{{ skill.skill }}</td>
+            <td>{{ skill.skill.name }}</td>
             <td>{{ skill.required == true ? "Yes" : "No" }}</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
-  <h2 class="m-3">Calculated Ratings</h2>
-  <div class="container">
-    <div class="table">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>PPS Number</th>
-            <th>First Name</th>
-            <th>Surname</th>
-            <th>Distance (km)</th>
-            <th>% Skill Match</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let rating of ratings">
-            <td>{{ rating.ppsnumber }}</td>
-            <td>{{ rating.firstname }}</td>
-            <td>{{ rating.surname }}</td>
-            <td>{{ rating.distance }}</td>
-            <td>{{ rating.skillfit * 100 }}%</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+  <h2 class="m-3">Available Applicants</h2>
+
+  <table mat-table [dataSource]="ratings" matSort>
+    <!-- Applicant PPS Column -->
+    <ng-container matColumnDef="ppsnumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>PPS Number</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.ppsnumber }}
+      </td>
+    </ng-container>
+    <!-- Applicant First Name Column -->
+    <ng-container matColumnDef="firstname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.firstname }}
+      </td>
+    </ng-container>
+
+    <!-- Applicant Surname Column -->
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.surname }}
+      </td>
+    </ng-container>
+
+    <!-- Distance Column -->
+    <ng-container matColumnDef="distance">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
+      <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
+    </ng-container>
+
+    <!-- Skill Fit Column -->
+    <ng-container matColumnDef="skillfit">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Match Fit %</th>
+      <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
+    </ng-container>
+
+    <!-- Btn Column -->
+    <ng-container matColumnDef="viewdetail">
+      <th mat-header-cell *matHeaderCellDef>View Detail</th>
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="btn btn-outline-secondary btn-sm"
+          type="button"
+          routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
+        >
+          View Details
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
