--- a/clients/administration-portal/src/app/modules/internalusers/request-view/request-view.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/request-view/request-view.component.html
@@ -1,1 +1,100 @@
-<p>request-view works!</p>
+<div class="card mt-3">
+  <div class="card-header"><b>Requests</b></div>
+
+  <div class="card-body mt3">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Client, Requester Name, Grade Requested"
+        #input
+      />
+    </mat-form-field>
+    <table mat-table [dataSource]="requests" matSort>
+      <!-- CLient Column -->
+      <ng-container matColumnDef="client">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Client</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.requester.client.name }}
+        </td>
+      </ng-container>
+
+      <!--  Requester First Name Column -->
+      <ng-container matColumnDef="requesterfirstname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Requester First Name
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.requester.firstname }}</td>
+      </ng-container>
+
+      <!-- Requester Surname Column -->
+      <ng-container matColumnDef="requstersurname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Requester Surname
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.requester.surname }}</td>
+      </ng-container>
+
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.status }}
+        </td>
+      </ng-container>
+
+      <!-- Grade Required Column -->
+      <ng-container matColumnDef="grade">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Grade Requested
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.graderequired }}
+        </td>
+      </ng-container>
+
+      <!-- Number Required Column -->
+      <ng-container matColumnDef="numberrequired">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header># Requested</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row?.numberrequired }}
+        </td>
+      </ng-container>
+
+      <!-- Number Assigned Column -->
+      <ng-container matColumnDef="numberassigned">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header># Assigned</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.assigned.length }}
+        </td>
+      </ng-container>
+
+      <!-- Btn Column -->
+      <ng-container matColumnDef="viewdetail">
+        <th mat-header-cell *matHeaderCellDef>View Detail</th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            class="btn btn-outline-secondary btn-sm"
+            type="button"
+            routerLink="./request/{{ row._id }}"
+          >
+            View Details
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
