Added Rating views to Request & Applicant

--- a/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
@@ -26,8 +26,8 @@
 
     <div class="form-group">
       <label>Grade</label>
-      <select class="custom-select" formControlName="grade">
-        <option selected>Please select your grade.</option>
+      <select class="custom-select" formControlName="graderequired">
+        <option selected>Please select the grade required.</option>
         <option *ngFor="let grade of grades">{{ grade }}</option>
       </select>
     </div>
