--- a/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
@@ -2,18 +2,18 @@
   <h2 class="m-3">Request Information</h2>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
-      Requester: {{ request.requester.firstname }}
-      {{ request.requester.surname }}
+      Requester: {{ request?.requester.firstname }}
+      {{ request?.requester.surname }}
     </li>
     <li class="list-group-item">
-      Requesting Organisation: {{ request.requester.client.name }}
+      Requesting Organisation: {{ request?.requester.client.name }}
     </li>
     <li class="list-group-item">
-      Number Requested: {{ request.numberrequired }}
+      Number Requested: {{ request?.numberrequired }}
     </li>
-    <li class="list-group-item">Grade: {{ request.graderequired }}</li>
+    <li class="list-group-item">Grade: {{ request?.graderequired }}</li>
     <li class="list-group-item">
-      Work Pattern: {{ request.fulltime == true ? "Full-Time" : "Part-Time" }}
+      Work Pattern: {{ request?.fulltime == true ? "Full-Time" : "Part-Time" }}
     </li>
   </ul>
   <h2 class="m-3">Skills Requested</h2>
@@ -25,7 +25,7 @@
           <th>Required?</th>
         </thead>
         <tbody>
-          <tr *ngFor="let skill of request.skillsrequested">
+          <tr *ngFor="let skill of request?.skillsrequested">
             <td>{{ skill.skill.name }}</td>
             <td>{{ skill.required == true ? "Yes" : "No" }}</td>
           </tr>
@@ -35,17 +35,17 @@
   </div>
   <h2 class="m-3">Available Applicants</h2>
 
-  <table mat-table [dataSource]="ratings" matSort>
+  <table mat-table [dataSource]="validatedRatings">
     <!-- Applicant PPS Column -->
     <ng-container matColumnDef="ppsnumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>PPS Number</th>
+      <th mat-header-cell *matHeaderCellDef>PPS Number</th>
       <td mat-cell *matCellDef="let row">
         {{ row.applicant.ppsnumber }}
       </td>
     </ng-container>
     <!-- Applicant First Name Column -->
     <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
       <td mat-cell *matCellDef="let row">
         {{ row.applicant.firstname }}
       </td>
@@ -53,7 +53,7 @@
 
     <!-- Applicant Surname Column -->
     <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+      <th mat-header-cell *matHeaderCellDef>Surname</th>
       <td mat-cell *matCellDef="let row">
         {{ row.applicant.surname }}
       </td>
@@ -61,13 +61,13 @@
 
     <!-- Distance Column -->
     <ng-container matColumnDef="distance">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
+      <th mat-header-cell *matHeaderCellDef>Employer</th>
       <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
     </ng-container>
 
     <!-- Skill Fit Column -->
     <ng-container matColumnDef="skillfit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Match Fit %</th>
+      <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
       <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
     </ng-container>
 
@@ -88,6 +88,68 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <mat-paginator
+    #validatedPaginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+  ></mat-paginator>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <h2 class="m-3">Unvalidated Applicants</h2>
+
+  <table mat-table [dataSource]="unvalidatedRatings">
+    <!-- Applicant PPS Column -->
+    <ng-container matColumnDef="ppsnumber">
+      <th mat-header-cell *matHeaderCellDef>PPS Number</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.ppsnumber }}
+      </td>
+    </ng-container>
+    <!-- Applicant First Name Column -->
+    <ng-container matColumnDef="firstname">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.firstname }}
+      </td>
+    </ng-container>
+
+    <!-- Applicant Surname Column -->
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef>Surname</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.applicant.surname }}
+      </td>
+    </ng-container>
+
+    <!-- Distance Column -->
+    <ng-container matColumnDef="distance">
+      <th mat-header-cell *matHeaderCellDef>Distance</th>
+      <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
+    </ng-container>
+
+    <!-- Skill Fit Column -->
+    <ng-container matColumnDef="skillfit">
+      <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
+      <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
+    </ng-container>
+
+    <!-- Btn Column -->
+    <ng-container matColumnDef="viewdetail">
+      <th mat-header-cell *matHeaderCellDef>View Detail</th>
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="btn btn-outline-secondary btn-sm"
+          type="button"
+          routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
+        >
+          View Details
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    #unvalidatedPaginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+  ></mat-paginator>
 </div>
