Updated detail to show assignment info

--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -9,6 +9,10 @@
           <button mat-list-item routerLink="/admin/requests">
             View Requests
           </button>
+          <button mat-list-item routerLink="/admin/requests/match">
+            Match Open Requests
+          </button>
+
           <button mat-list-item routerLink="/admin/portalusers/createuser">
             Create Client Portal User
           </button>
