--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-detail/applicant-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-detail/applicant-detail.component.html
@@ -15,6 +15,18 @@
         <li class="list-group-item">Address 2: {{ applicant?.address2 }}</li>
         <li class="list-group-item">Eircode: {{ applicant?.eircode }}</li>
         <li class="list-group-item">County: {{ applicant?.county }}</li>
+        <li>
+          <button
+            (click)="validate()"
+            class="btn btn-warning"
+            *ngIf="applicant?.status == 'Unvalidated'"
+          >
+            Validate
+          </button>
+          <button class="btn btn-danger" routerLink="/admin/applicants/">
+            Return to Applicants
+          </button>
+        </li>
       </ul>
     </mat-tab>
     <mat-tab label="Employment Information">
@@ -30,11 +42,21 @@
       </ul>
     </mat-tab>
 
-    <mat-tab label="Rating Information" [disabled]="ratings.data.length == 0">
+    <mat-tab label="Rating Information" [disabled]="ratings?.data.length == 0">
       <table class="ratingtable" mat-table [dataSource]="ratings" matSort>
+        <!-- Request ID Column -->
+        <ng-container matColumnDef="requestid">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Request ID</th>
+          <td mat-cell *matCellDef="let row">
+            Request-{{ row.request.requestID }}
+          </td>
+        </ng-container>
+
         <!-- Requester First Name Column -->
         <ng-container matColumnDef="firstname">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Requesting Manager First Name
+          </th>
           <td mat-cell *matCellDef="let row">
             {{ row.request.requester.firstname }}
           </td>
@@ -42,7 +64,9 @@
 
         <!-- Requester Surname Column -->
         <ng-container matColumnDef="surname">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Requesting Manager Surname
+          </th>
           <td mat-cell *matCellDef="let row">
             {{ row.request.requester.surname }}
           </td>
@@ -88,8 +112,36 @@
 
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </mat-tab>
-    <mat-tab label="Assignment Information" [disabled]="true"
-      >Content 3</mat-tab
+    <mat-tab
+      label="Assignment Information"
+      [disabled]="applicant?.status !== 'Assigned'"
     >
+      <ng-container *ngIf="applicant?.assignment !== undefined">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            Request ID: Request-{{ applicant?.assignment.requestID }}
+          </li>
+          <li class="list-group-item">
+            Name: {{ applicant?.assignment.requester.firstname }}
+            {{ applicant?.assignment.requester.surname }}
+          </li>
+          <li class="list-group-item">
+            Personal E-Mail Address: {{ applicant?.assignment.requester.email }}
+          </li>
+          <li class="list-group-item">
+            Address 1: {{ applicant?.assignment.requester.address1 }}
+          </li>
+          <li class="list-group-item">
+            Address 2: {{ applicant?.assignment.requester.address2 }}
+          </li>
+          <li class="list-group-item">
+            Eircode: {{ applicant?.assignment.requester.eircode }}
+          </li>
+          <li class="list-group-item">
+            County: {{ applicant?.assignment.requester.county }}
+          </li>
+        </ul>
+      </ng-container>
+    </mat-tab>
   </mat-tab-group>
 </div>
