--- a/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
@@ -1,155 +1,170 @@
 <div class="card mt-3">
-  <h2 class="m-3">Request Information</h2>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">
-      Requester: {{ request?.requester.firstname }}
-      {{ request?.requester.surname }}
-    </li>
-    <li class="list-group-item">
-      Requesting Organisation: {{ request?.requester.client.name }}
-    </li>
-    <li class="list-group-item">
-      Number Requested: {{ request?.numberrequired }}
-    </li>
-    <li class="list-group-item">Grade: {{ request?.graderequired }}</li>
-    <li class="list-group-item">
-      Work Pattern: {{ request?.fulltime == true ? "Full-Time" : "Part-Time" }}
-    </li>
-  </ul>
-  <h2 class="m-3">Skills Requested</h2>
-  <div class="container">
-    <div class="table">
-      <table class="table">
-        <thead>
-          <th>Skill</th>
-          <th>Required?</th>
-        </thead>
-        <tbody>
-          <tr *ngFor="let skill of request?.skillsrequested">
-            <td>{{ skill.skill.name }}</td>
-            <td>{{ skill.required == true ? "Yes" : "No" }}</td>
-          </tr>
-        </tbody>
+  <mat-tab-group mat-align-tabs="left" animationDuration="0ms">
+    <mat-tab label="Request Information">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Request ID: Request-{{ request?.requestID }}
+        </li>
+        <li class="list-group-item">Status: {{ request?.status }}</li>
+        <li class="list-group-item">
+          Requester: {{ request?.requester.firstname }}
+          {{ request?.requester.surname }}
+        </li>
+        <li class="list-group-item">
+          Requesting Organisation: {{ request?.requester.client.name }}
+        </li>
+        <li class="list-group-item">
+          Number Requested: {{ request?.numberrequired }}
+        </li>
+        <li class="list-group-item">Grade: {{ request?.graderequired }}</li>
+        <li class="list-group-item">
+          Work Pattern:
+          {{ request?.fulltime == true ? "Full-Time" : "Part-Time" }}
+        </li>
+      </ul>
+      <h2 class="m-3">Skills Requested</h2>
+      <div class="container">
+        <div class="table">
+          <table class="table">
+            <thead>
+              <th>Skill</th>
+              <th>Required?</th>
+            </thead>
+            <tbody>
+              <tr *ngFor="let skill of request?.skillsrequested">
+                <td>{{ skill.skill.name }}</td>
+                <td>{{ skill.required == true ? "Yes" : "No" }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label="Rating Information">
+      <h2 class="m-3">Available Applicants</h2>
+      <ng-container *ngIf="validatedRatings?.data.length == 0">
+        <b class="ml-3">No Available Applicants</b>
+      </ng-container>
+      <ng-container *ngIf="validatedRatings?.data.length !== 0">
+        <table class="ratingtable" mat-table [dataSource]="validatedRatings">
+          <!-- Applicant PPS Column -->
+          <ng-container matColumnDef="ppsnumber">
+            <th mat-header-cell *matHeaderCellDef>PPS Number</th>
+            <td mat-cell *matCellDef="let row">
+              {{ row.applicant.ppsnumber }}
+            </td>
+          </ng-container>
+          <!-- Applicant First Name Column -->
+          <ng-container matColumnDef="firstname">
+            <th mat-header-cell *matHeaderCellDef>First Name</th>
+            <td mat-cell *matCellDef="let row">
+              {{ row.applicant.firstname }}
+            </td>
+          </ng-container>
+
+          <!-- Applicant Surname Column -->
+          <ng-container matColumnDef="surname">
+            <th mat-header-cell *matHeaderCellDef>Surname</th>
+            <td mat-cell *matCellDef="let row">
+              {{ row.applicant.surname }}
+            </td>
+          </ng-container>
+
+          <!-- Distance Column -->
+          <ng-container matColumnDef="distance">
+            <th mat-header-cell *matHeaderCellDef>Employer</th>
+            <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
+          </ng-container>
+
+          <!-- Skill Fit Column -->
+          <ng-container matColumnDef="skillfit">
+            <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
+            <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
+          </ng-container>
+
+          <!-- Btn Column -->
+          <ng-container matColumnDef="viewdetail">
+            <th mat-header-cell *matHeaderCellDef>View Detail</th>
+            <td mat-cell *matCellDef="let row">
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                type="button"
+                routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
+              >
+                View Details
+              </button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator
+          #validatedPaginator
+          [pageSizeOptions]="[5, 10, 25, 100]"
+        ></mat-paginator>
+      </ng-container>
+
+      <h2 class="m-3">Unvalidated Applicants</h2>
+
+      <table class="ratingtable" mat-table [dataSource]="unvalidatedRatings">
+        <!-- Applicant PPS Column -->
+        <ng-container matColumnDef="ppsnumber">
+          <th mat-header-cell *matHeaderCellDef>PPS Number</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.applicant.ppsnumber }}
+          </td>
+        </ng-container>
+        <!-- Applicant First Name Column -->
+        <ng-container matColumnDef="firstname">
+          <th mat-header-cell *matHeaderCellDef>First Name</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.applicant.firstname }}
+          </td>
+        </ng-container>
+
+        <!-- Applicant Surname Column -->
+        <ng-container matColumnDef="surname">
+          <th mat-header-cell *matHeaderCellDef>Surname</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.applicant.surname }}
+          </td>
+        </ng-container>
+
+        <!-- Distance Column -->
+        <ng-container matColumnDef="distance">
+          <th mat-header-cell *matHeaderCellDef>Distance</th>
+          <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
+        </ng-container>
+
+        <!-- Skill Fit Column -->
+        <ng-container matColumnDef="skillfit">
+          <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
+          <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
+        </ng-container>
+
+        <!-- Btn Column -->
+        <ng-container matColumnDef="viewdetail">
+          <th mat-header-cell *matHeaderCellDef>View Detail</th>
+          <td mat-cell *matCellDef="let row">
+            <button
+              class="btn btn-outline-secondary btn-sm"
+              type="button"
+              routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
+            >
+              View Details
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-    </div>
-  </div>
-  <h2 class="m-3">Available Applicants</h2>
-
-  <table mat-table [dataSource]="validatedRatings">
-    <!-- Applicant PPS Column -->
-    <ng-container matColumnDef="ppsnumber">
-      <th mat-header-cell *matHeaderCellDef>PPS Number</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.ppsnumber }}
-      </td>
-    </ng-container>
-    <!-- Applicant First Name Column -->
-    <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef>First Name</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.firstname }}
-      </td>
-    </ng-container>
-
-    <!-- Applicant Surname Column -->
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef>Surname</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.surname }}
-      </td>
-    </ng-container>
-
-    <!-- Distance Column -->
-    <ng-container matColumnDef="distance">
-      <th mat-header-cell *matHeaderCellDef>Employer</th>
-      <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
-    </ng-container>
-
-    <!-- Skill Fit Column -->
-    <ng-container matColumnDef="skillfit">
-      <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
-      <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
-    </ng-container>
-
-    <!-- Btn Column -->
-    <ng-container matColumnDef="viewdetail">
-      <th mat-header-cell *matHeaderCellDef>View Detail</th>
-      <td mat-cell *matCellDef="let row">
-        <button
-          class="btn btn-outline-secondary btn-sm"
-          type="button"
-          routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
-        >
-          View Details
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    #validatedPaginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
-  ></mat-paginator>
-
-  <h2 class="m-3">Unvalidated Applicants</h2>
-
-  <table mat-table [dataSource]="unvalidatedRatings">
-    <!-- Applicant PPS Column -->
-    <ng-container matColumnDef="ppsnumber">
-      <th mat-header-cell *matHeaderCellDef>PPS Number</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.ppsnumber }}
-      </td>
-    </ng-container>
-    <!-- Applicant First Name Column -->
-    <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef>First Name</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.firstname }}
-      </td>
-    </ng-container>
-
-    <!-- Applicant Surname Column -->
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef>Surname</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.applicant.surname }}
-      </td>
-    </ng-container>
-
-    <!-- Distance Column -->
-    <ng-container matColumnDef="distance">
-      <th mat-header-cell *matHeaderCellDef>Distance</th>
-      <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
-    </ng-container>
-
-    <!-- Skill Fit Column -->
-    <ng-container matColumnDef="skillfit">
-      <th mat-header-cell *matHeaderCellDef>Match Fit %</th>
-      <td mat-cell *matCellDef="let row">{{ row.matchFit * 100 }}%</td>
-    </ng-container>
-
-    <!-- Btn Column -->
-    <ng-container matColumnDef="viewdetail">
-      <th mat-header-cell *matHeaderCellDef>View Detail</th>
-      <td mat-cell *matCellDef="let row">
-        <button
-          class="btn btn-outline-secondary btn-sm"
-          type="button"
-          routerLink="/admin/applicants/applicant/{{ row.applicant._id }}"
-        >
-          View Details
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    #unvalidatedPaginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
-  ></mat-paginator>
+      <mat-paginator
+        #unvalidatedPaginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+      ></mat-paginator>
+    </mat-tab>
+    <mat-tab label="Third"> Content 3 </mat-tab>
+  </mat-tab-group>
 </div>
