--- a/clients/administration-portal/src/styles.css
+++ b/clients/administration-portal/src/styles.css
@@ -13,3 +13,12 @@ body {
 .hide-active-button {
   display: none;
 }
+
+.right-aligned-header > .mat-content {
+  justify-content: space-between;
+}
+
+.mat-content > mat-panel-title,
+.mat-content > mat-panel-description {
+  flex: 0 0 auto;
+}
