--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -3,6 +3,7 @@
     <nav class="col-xl">
       <div class="sidebar-sticky pt-3">
         <mat-action-list>
+          <button mat-list-item routerLink="/admin/">Dashboard</button>
           <button mat-list-item routerLink="/admin/applicants">
             View Applicants
           </button>
