minor updates to styling of content

--- a/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
@@ -83,7 +83,7 @@
                 <label>Required?</label>
                 <select class="custom-select" formControlName="required">
                   <option value="true">Yes</option>
-                  <option value="false">No</option>
+                  <option value="false" selected>No</option>
                 </select>
               </div>
             </div>
