--- a/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/applicant-view/applicant-view.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-3">
-  <div class="card-header">Applicants</div>
+  <div class="card-header"><b>Applicants</b></div>
 
   <div class="card-body mt3">
     <mat-form-field>
