--- a/clients/administration-portal/src/app/modules/externalusers/staff-view/staff-view.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/staff-view/staff-view.component.html
@@ -1,81 +1,84 @@
-<div class="mt-3 border">
-  <mat-form-field class="ml-3">
-    <mat-label>Filter</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. Name, Department, Grade"
-      #input
-    />
-  </mat-form-field>
+<div class="card mt-3">
+  <div class="card-header"><b>Registered Staff</b></div>
+  <div class="card-body mt3">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Name, Department, Grade"
+        #input
+      />
+    </mat-form-field>
 
-  <table mat-table [dataSource]="dataSource" matSort>
-    <!-- PPSN Column -->
-    <ng-container matColumnDef="ppsnumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>PPS Number</th>
-      <td mat-cell *matCellDef="let row">{{ row.ppsnumber }}</td>
-    </ng-container>
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- PPSN Column -->
+      <ng-container matColumnDef="ppsnumber">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>PPS Number</th>
+        <td mat-cell *matCellDef="let row">{{ row.ppsnumber }}</td>
+      </ng-container>
 
-    <!-- First Name Column -->
-    <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.firstname }}</td>
-    </ng-container>
+      <!-- First Name Column -->
+      <ng-container matColumnDef="firstname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.firstname }}</td>
+      </ng-container>
 
-    <!-- Surname Column -->
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
-      <td mat-cell *matCellDef="let row">{{ row.surname }}</td>
-    </ng-container>
+      <!-- Surname Column -->
+      <ng-container matColumnDef="surname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+        <td mat-cell *matCellDef="let row">{{ row.surname }}</td>
+      </ng-container>
 
-    <!-- Status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.status }}
-      </td>
-    </ng-container>
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.status }}
+        </td>
+      </ng-container>
 
-    <!-- Employer Column -->
-    <ng-container matColumnDef="employer">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.employer.name }}
-      </td>
-    </ng-container>
+      <!-- Employer Column -->
+      <ng-container matColumnDef="employer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Employer</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.employer.name }}
+        </td>
+      </ng-container>
 
-    <!-- Grade Column -->
-    <ng-container matColumnDef="grade">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.grade }}
-      </td>
-    </ng-container>
+      <!-- Grade Column -->
+      <ng-container matColumnDef="grade">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Grade</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.grade }}
+        </td>
+      </ng-container>
 
-    <!-- Btn Column -->
-    <ng-container matColumnDef="viewdetail">
-      <th mat-header-cell *matHeaderCellDef>View Detail</th>
-      <td mat-cell *matCellDef="let row">
-        <button
-          class="btn btn-outline-secondary btn-sm"
-          type="button"
-          routerLink="./{{ row._id }}"
-        >
-          View Details
-        </button>
-      </td>
-    </ng-container>
+      <!-- Btn Column -->
+      <ng-container matColumnDef="viewdetail">
+        <th mat-header-cell *matHeaderCellDef>View Detail</th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            class="btn btn-outline-secondary btn-sm"
+            type="button"
+            routerLink="./{{ row._id }}"
+          >
+            View Details
+          </button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">
-        No data matching the filter "{{ input.value }}"
-      </td>
-    </tr>
-  </table>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
 </div>
