--- a/clients/administration-portal/src/app/modules/internalusers/register-portal-user/register-portal-user.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/register-portal-user/register-portal-user.component.html
@@ -1,64 +1,77 @@
-<div class="alert alert-success" *ngIf="registered">User Registered!</div>
+<div class="card mt-3">
+  <div class="card-header"><b>Register Portal User</b></div>
+  <div class="card-body">
+    <div class="alert alert-success" *ngIf="registered">User Registered!</div>
 
-<div class="alert alert-danger" *ngIf="errors?.length > 0">
-  <p *ngFor="let error of errors">
-    {{ error }}
-  </p>
+    <div class="alert alert-danger" *ngIf="errors?.length > 0">
+      <p *ngFor="let error of errors">
+        {{ error }}
+      </p>
+    </div>
+    <form
+      *ngIf="!registered"
+      [formGroup]="portalForm"
+      (ngSubmit)="submitForm()"
+    >
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>First Name:</label>
+          <input class="form-control" type="text" formControlName="firstname" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>Surname:</label>
+          <input class="form-control" type="text" formControlName="surname" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Client:</label>
+        <select class="custom-select" formControlName="client">
+          <option *ngFor="let item of clients" [value]="item._id">
+            {{ item.name }}
+          </option>
+        </select>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>Work Phone:</label>
+          <input class="form-control" type="text" formControlName="workphone" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>Work E-Mail:</label>
+          <input class="form-control" type="text" formControlName="email" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Address 1:</label>
+        <input type="text" class="form-control" formControlName="address1" />
+      </div>
+      <div class="form-group">
+        <label>Address 2:</label>
+        <input type="text" class="form-control" formControlName="address2" />
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label>Eircode:</label>
+          <input type="text" class="form-control" formControlName="eircode" />
+        </div>
+        <div class="form-group col-md-6">
+          <label>County:</label>
+          <input type="text" class="form-control" formControlName="county" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="text" class="form-control" formControlName="password" />
+      </div>
+      <div class="form-group">
+        <label>Confirm Password:</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="confirmpassword"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 </div>
-<form *ngIf="!registered" [formGroup]="portalForm" (ngSubmit)="submitForm()">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>First Name:</label>
-      <input class="form-control" type="text" formControlName="firstname" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>Surname:</label>
-      <input class="form-control" type="text" formControlName="surname" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label>Client:</label>
-    <select class="custom-select" formControlName="client">
-      <option *ngFor="let item of clients" [value]="item._id">
-        {{ item.name }}
-      </option>
-    </select>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>Work Phone:</label>
-      <input class="form-control" type="text" formControlName="workphone" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>Work E-Mail:</label>
-      <input class="form-control" type="text" formControlName="email" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label>Address 1:</label>
-    <input type="text" class="form-control" formControlName="address1" />
-  </div>
-  <div class="form-group">
-    <label>Address 2:</label>
-    <input type="text" class="form-control" formControlName="address2" />
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>Eircode:</label>
-      <input type="text" class="form-control" formControlName="eircode" />
-    </div>
-    <div class="form-group col-md-6">
-      <label>County:</label>
-      <input type="text" class="form-control" formControlName="county" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label>Password:</label>
-    <input type="text" class="form-control" formControlName="password" />
-  </div>
-  <div class="form-group">
-    <label>Confirm Password:</label>
-    <input type="text" class="form-control" formControlName="confirmpassword" />
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
