--- a/clients/administration-portal/src/app/app.component.html
+++ b/clients/administration-portal/src/app/app.component.html
@@ -21,12 +21,23 @@
       >
         Home
       </a>
-      <a class="nav-link" routerLink="/admin" routerLinkActive="active-button">
-        Internal Administration
-      </a>
-      <a class="nav-link" routerLink="/clients" routerLinkActive="active-button"
-        >Client Portal</a
-      >
+      <ng-container *ngIf="authService.isAuthenticated()">
+        <a
+          *ngIf="authService.getClientName() == 'Public Appointments Service'"
+          class="nav-link"
+          routerLink="/admin"
+          routerLinkActive="active-button"
+        >
+          Internal Administration
+        </a>
+        <a
+          *ngIf="authService.getClientName() !== 'Public Appointments Service'"
+          class="nav-link"
+          routerLink="/clients"
+          routerLinkActive="active-button"
+          >Client Portal</a
+        >
+      </ng-container>
     </div>
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
