--- a/clients/administration-portal/src/app/loginpage/loginpage.component.html
+++ b/clients/administration-portal/src/app/loginpage/loginpage.component.html
@@ -1,14 +1,17 @@
-<div class="container mt-5">
+<div class="container">
   <div class="row">
     <div class="col-md-5">
-      <h1 class="page-title">Login</h1>
+      <h1 class="page-title mt-3">Login</h1>
       <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-group">
-          <div *ngIf="errors?.length > 0" class="alert alert-danger">
-            <p *ngFor="let error of errors">
-              {{ error }}
-            </p>
-          </div>
+          <ng-container *ngIf="errors?.length > 0">
+            <div class="alert alert-danger">
+              <p *ngFor="let error of errors">
+                {{ error }}
+              </p>
+            </div>
+          </ng-container>
+
           <label for="email">Email</label>
           <input type="email" class="form-control" formControlName="email" />
         </div>
