Added comments and minor tweaks

--- a/clients/applicant-portal/src/app/home-page/home-page.component.html
+++ b/clients/applicant-portal/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
     <p>Welcome to the application form for the Temporary Assignments Scheme.</p>
     <p>
       By applying to this scheme, the information you provide in the application
-      form may be shared with your employer and participating agencys in the
+      form may be shared with your employer and participating agencies in the
       scheme.
     </p>
     <p>
