--- a/clients/administration-portal/src/app/app.component.html
+++ b/clients/administration-portal/src/app/app.component.html
@@ -1,18 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand">Temporary Assignments Scheme Administration</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <div
+    class="collapse navbar-collapse justify-content-center"
+    id="navbarNavAltMarkup"
   >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
+      <a class="navbar-brand justify-content-center"
+        >Temporary Assignments Scheme Administration</a
+      >
       <a
         class="nav-link"
         routerLink="/"
