--- a/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
@@ -1,4 +1,7 @@
-<div class="container border m-3">
+<div class="card border m-3">
+  <div class="card-header">
+    Request Form - <em class="text-muted">All Fields Are Required</em>
+  </div>
   <form
     [formGroup]="requestForm"
     class="container mt-3"
@@ -41,7 +44,7 @@
     </div>
 
     <div class="container border col-12 p-3">
-      <div><h1>Skills Required</h1></div>
+      <div><h1>Skills Requested</h1></div>
       <div
         class="container border mb-4 p-3"
         formArrayName="skillsrequested"
@@ -95,7 +98,13 @@
       </button>
     </div>
     <div class="p-3">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!requestForm.valid"
+      >
+        Submit
+      </button>
     </div>
   </form>
 </div>
