--- a/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/internalusers.component.html
@@ -1,5 +1,5 @@
 <div class="container fluid">
-  <div class="row">
+  <div class="row d-flex justify-content-center">
     <nav class="col-xl">
       <div class="sidebar-sticky pt-3">
         <mat-action-list>
