--- a/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
+++ b/clients/administration-portal/src/app/modules/internalusers/request-view/request-detail/request-detail.component.html
@@ -75,7 +75,7 @@
 
           <!-- Distance Column -->
           <ng-container matColumnDef="distance">
-            <th mat-header-cell *matHeaderCellDef>Employer</th>
+            <th mat-header-cell *matHeaderCellDef>Distance</th>
             <td mat-cell *matCellDef="let row">{{ row.distance }} Km</td>
           </ng-container>
 
