added request submission confirmation

--- a/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
+++ b/clients/administration-portal/src/app/modules/externalusers/request-form/request-form.component.html
@@ -2,9 +2,11 @@
   <div class="card-header">
     Request Form - <em class="text-muted">All Fields Are Required</em>
   </div>
+  <div class="alert alert-success" *ngIf="submitted">Request Logged!</div>
   <form
     [formGroup]="requestForm"
     class="container mt-3"
+    *ngIf="!submitted"
     (ngSubmit)="submitRequest()"
   >
     <div class="form-group">
